# fomo25

./: .gitignore  DOCKER_README.md  Dockerfile  README.md  preprocess_dataset.sh  pyproject.toml  run_segmentation_dataset.sh
scripts/: download_weights.sh  verify_checkpoint.py
src/data/preprocess/: preprocess_nnunet_structure.py
src/fomo_code/: __init__.py
src/jomo/: __init__.py
src/jomo/utils/: load_weights.py
weights/: README.md
