[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fomo_code"]

[project]
name = "fomo-code"
version = "0.1.0"
description = "FOMO25 Challenge Codebase - Foundation Models for Brain MRI Analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Asbjørn Munk"},
    {name = "Jakob Ambsdorf"},
    {name = "FOMO25 Challenge Organizers"},
]
dependencies = [
    "lightning>=2.1.4",
    "numpy>=1.23,<2.0",
    "yucca==2.2.6",
    "opencv-python>=4.8.1.78",
    "einops>=0.7",
    "torch>=2.0",
    "nnunetv2>=2.4.2",
    "wandb>=0.16.0",
]

[project.optional-dependencies]
dev = ["jupyter>=1.0.0"]
test = [
    "pytest>=6.0.0",
    "flake8>=6.1.0",
    "black>=23.10.1",
]

[tool.pytest]
testpaths = ["tests"]

[tool.black]
line-height = 88
target-version = ["py39"]